# team-C

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  compose.prod.yaml  compose.yaml  pyproject.toml
.github/workflows/: build-prod-images.yml  ci.yml
agents/macos/: Package.swift  README.md  com.edr-c.agent.plist  config.example.json
agents/windows/: CMakeLists.txt  README.md  config.example.json
agents/windows/include/edr_agent/: core.hpp  packet_parser.hpp  windows_agent.hpp
agents/windows/src/: core.cpp  main.cpp  packet_parser.cpp  windows_collectors.cpp  windows_transport.cpp
agents/windows/tests/: core_tests.cpp
backend/: __init__.py  agent_identity.py  api_services.py  archive_lifecycle.py  archive_service.py  auth.py  collector.py  dashboard_layouts.py  detection.py  dns_lookup.py  dns_service.py  errors.py  event_service.py  failure.py  investigation_service.py  kafka.py  main.py  mitre.py  operations_service.py  rule_loader.py  rules.py  runtime.py  settings.py  summary_service.py  time_range.py  worker_health.py  workers.py
backend/contracts/: __init__.py  alerts.py  api_manifest.py  archives.py  auth.py  collector.py  common.py  dashboard.py  dashboard_layouts.py  endpoints.py  enums.py  events.py  incidents.py  intelligence.py  investigations.py  operations.py  requests.py
backend/policy/: __init__.py  edr_state.py  risk.py
backend/storage/: __init__.py  clickhouse.py  migrations.py  models.py  postgres.py
deploy/docker/: backend.Dockerfile  nginx.Dockerfile
deploy/nginx/: collector_trusted_headers.conf  nginx.dev.conf  nginx.prod.conf
deploy/portainer/: README.md  compose.infra.yaml  compose.observability.yaml  compose.portainer-agent.yaml  compose.portainer-server.yaml  compose.service.yaml  env.infra.example  env.observability.example  env.service.example  pin-images.py
docs/architecture/: AUTH_SESSION_IMPLEMENTATION_GUIDE.md  EDR_DATA_MODEL.md  ERD_FINAL.sql  ERD_FINAL_NO_COMMENTS.sql  ERD_TABLE_ATTRIBUTE_DICTIONARY.md  TECH_STACK.md
docs/contracts/: API_SPEC.md  RISK_POLICY.md
docs/frontend/: DESIGN.md  FRONTEND_BACKEND_UI_REDESIGN_WORK_ORDER.md  FRONTEND_SPEC.md  (+8 more)
frontend/: .dockerignore  AGENTS.md  Dockerfile.dev  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts
mappings/: README.md  mitre_attack.yaml
openapi/: openapi.json
schemas/: rule-v1.schema.json
tests/: agent_mtls_gateway.py  run_agent_e2e.py  seed_frontend_qa.py  test_agent_identity.py  test_api_manifest.py  test_archive_lifecycle.py  test_archive_range.py  test_aws_runtime.py  test_backend_support_contracts.py  test_collector_contracts.py  test_collector_service.py  test_compose_contract.py  test_contract_serialization.py  test_create_admin.py  test_dashboard_api_integration.py  test_dashboard_event_aggregation.py  test_dashboard_layouts.py  test_dashboard_long_range_seed.py  test_detection.py  test_dns_lookup.py  test_dns_lookup_live.py  test_dto_required_keys.py  test_edr_state_policy.py  test_enums.py  test_event_pagination.py  test_health.py  test_incident_investigation.py  test_ingest_pipeline_integration.py  test_investigation_service.py  test_kafka.py  test_local_demo.py  test_login_contract.py  test_manage_admin.py  test_mitre_catalog.py  test_openapi.py  test_operations_health.py  test_portainer_compose_contract.py  test_presentation_demo_seed.py  test_prod_init.py  test_provision_agent_cert.py  (+12 more)
tools/: __init__.py  backup_production_data.sh  check_worker_health.py  create_admin.py  docker_backend_entrypoint.py  export_openapi.py  local_demo.py  manage_admin.py  prod_init.py  provision_agent_cert.py  provision_compose_certs.py  replay_failure.py  run_detection_worker.py  run_event_storage_worker.py  run_storage_lifecycle_worker.py  secure_files.py  seed_dashboard_long_range.py  seed_presentation_demo.py  seed_safety.py  sync_mitre_attack.py  verify_presentation_demo.py  verify_production_deployment.ps1
(+174 files in other folders)
