[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "edr-c-backend"
version = "0.1.0"
description = "Contract-first foundation for the EDR_C backend"
requires-python = ">=3.12,<3.14"
dependencies = [
  "argon2-cffi>=23.1,<26",
  "boto3>=1.40,<2",
  "clickhouse-connect>=0.8,<1",
  "confluent-kafka>=2.11,<3",
  "cryptography>=48.0.1,<49",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "jsonschema>=4.23,<5",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.9,<3",
  "psycopg[binary]>=3.2,<4",
  "pyarrow>=23.0.1,<24",
  "pyjwt>=2.10,<3",
  "pyyaml>=6.0.2,<7",
  "uvicorn>=0.34,<1",
  "dnspython>=2.8.0",
]

[dependency-groups]
dev = [
  "pip-audit>=2.9,<3",
  "pytest>=9.0.3,<10",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["backend", "tools"]

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "schemas"
"rules" = "rules"
"mappings" = "mappings"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
markers = ["integration: requires local PostgreSQL, ClickHouse, Kafka, and MinIO services"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP046"]
